--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Heather Riley is a front-end developer based in Saugatuck, MI"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Heather Riley</title>
+    <title>Heather Riley - Front-End Developer</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -61,7 +65,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" alt="yoga-img" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="girl doing yoga"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga App</h2>
@@ -92,7 +100,7 @@
         <div class="col-md-6">
           <img
             src="images/weather.png"
-            alt="weather-img"
+            alt="weather forecast"
             class="img-fluid rounded"
           />
         </div>
@@ -101,7 +109,7 @@
         <div class="col-md-6">
           <img
             src="images/yogurt.png"
-            alt="yogurt-img"
+            alt="cup of yogurt with blueberries"
             class="img-fluid rounded"
           />
         </div>
