made mobile device friendly

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <img
             src="images/yoga.png"
             alt="girl doing yoga"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
@@ -101,7 +101,7 @@
           <img
             src="images/weather.png"
             alt="weather forecast"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
@@ -110,7 +110,7 @@
           <img
             src="images/yogurt.png"
             alt="cup of yogurt with blueberries"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
